crates/wac-parser/tests/resolution/fail/mismatched-tuple-type.wac
package test:comp;

import x: interface {
    type t = tuple<u8, string, tuple<string>>;
};

let i = new foo:bar { x };
